# AwesomeModbusMaster

./: .gitignore  AwesomeModbusMaster-session.pro  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ubuntu_2204_nightly_build.yml
AwesomeModbusMaster/: AwesomeModbusMaster.pro
AwesomeModbusMaster/projects/cmake_local/: CMakeLists.txt
AwesomeModbusMaster/resources/translations/: AwesomeModbusMaster_de.ts  linguist_de.sh  release_tr.bat  release_tr.sh  update_tr.bat  update_tr.sh
AwesomeModbusMaster/src/: AMM_Config.cpp  AMM_Config.h  AMM_KeywordList.h  AMM_ModbusConfig.cpp  AMM_ModbusConfig.h  AMM_ModbusConnection.h  ClickableLabel.cpp  ClickableLabel.h  CodeGen_Constants.cpp  CodeGen_Constants.h  CodeGen_Macros.h  CodeGen_Utilities.cpp  ConnectionSettings.cpp  ConnectionSettings.h  ConnectionSettings.ui  Constants.cpp  Constants.h  DebugApplication.cpp  DebugApplication.h  Directories.cpp  Directories.h  Exception.cpp  Exception.h  LanguageHandler.cpp  LanguageHandler.h  LogFileDialog.cpp  LogFileDialog.h  LogFileDialog.ui  LogWidget.cpp  LogWidget.h  LoggingView.cpp  LoggingView.h  LoggingView.ui  MainContentWindow.cpp  MainContentWindow.h  MainContentWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MessageHandler.cpp  (+26 more)
AwesomeModbusMaster/src/cg/: cg_AMM_KeywordList.cpp  cg_AMM_ModbusConfig.cpp  cg_AMM_ModbusConnection.cpp
AwsomeModbusMaster/: AwesomeModbusMaster.pro
TinyXMLCodeGenerator/: .gitignore  TinyXMLCodeGenerator.pro
TinyXMLCodeGenerator/cg_utils/: CodeGen_Constants.cpp  CodeGen_Constants.h  CodeGen_Utilities.cpp  CodeGen_Utilities.h  readme.md
TinyXMLCodeGenerator/projects/cmake_local/: CMakeLists.txt
TinyXMLCodeGenerator/src/: ClassInfo.cpp  ClassInfo.h  CodeGenerator.cpp  CodeGenerator.h  constants.cpp  main.cpp
debian/: .gitignore  CMakeLists.txt  readme.md
debian/scripts/: buildBinary.sh  newUpstreamVersion.sh  update_repo.sh  update_source_code_archive.sh
debian/ubuntu-22.04-jammy/: .gitignore
debian/ubuntu-22.04-jammy/debian/: changelog  control  copyright
doc/: logging.adoc  sending.adoc
docs/: index.html
libs/: CONFIG.pri  common.pri  readme.md
libs/IBK/: .gitignore  IBK.pro
libs/IBK/projects/cmake_local/: CMakeLists.txt
libs/IBK/src/: IBK_FluidPhysics.cpp  IBK_FluidPhysics.h  IBK_StringUtils.cpp  IBK_StringUtils.h  IBK_math.cpp
libs/libmodbus/: .gitignore  libmodbus.pro
libs/libmodbus/projects/cmake_local/: CMakeLists.txt
libs/libmodbus/src/: config.h  modbus-data.c  modbus-private.h  modbus-rtu-private.h  modbus-rtu.c  modbus-rtu.h  modbus-tcp-private.h  modbus-tcp.c  modbus-version.h  modbus.c  modbus.h
libs/qwt/: qwt.pro
libs/qwt/projects/cmake_local/: CMakeLists.txt
libs/qwt/src/: qwt_point_3d.h
libs/tinyxml/: .gitignore  CMakeLists.txt  readme.md  tinyxml.pro
libs/tinyxml/projects/cmake_local/: CMakeLists.txt
libs/tinyxml/src/: tinyxml.h
scripts/: regenerate.sh  runCodeGenerator.bat  runCodeGenerator.sh
